examples/invalid_scl/type_error_rela.scl
type R(usize, &str)
type S(i64)

rel S(i) :- i = count(o: R(o, _))
